test/distributions/bradc/idxToLocale.comm-none.good
LOCALE0
idxToLocale.chpl:3: error: halt reached - array index out of bounds: (1)
